src/objects/ffps_prt__RemittanceSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ffps_prt__Allow_Select_Other_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bank Files - Allow Payments to be selected that are not at Matched status</description>
        <inlineHelpText>Bank Files - Allow Payments to be selected that are not at Matched status</inlineHelpText>
        <label>Allow Select Other Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_prt__CustomQuery__c</fullName>
        <description>The name of a static resource file should a custom query be required to render custom fields</description>
        <inlineHelpText>The name of a static resource file should a custom query be required to render custom fields</inlineHelpText>
        <label>Custom Query File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_prt__DisableAutoRemittance__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable Auto Remittance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_prt__DisablePrintPreviewInIFrame__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When generating a PDF for Print, should it be shown in a preview in an IFrame? This is the default setting but problems may arise if files get too large, in which case &apos;Post PDF to Chatter&apos; should be used instead and preview disabled.</description>
        <inlineHelpText>When generating a PDF for Print, should it be shown in a preview in an IFrame? This is the default setting but problems may arise if files get too large, in which case &apos;Post PDF to Chatter&apos; should be used instead and preview disabled.</inlineHelpText>
        <label>Disable Print Preview in IFrame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_prt__DownloadPluginClass__c</fullName>
        <description>The name of the Download Plugin class to use. This class must implement the ffps_prt.IDownloadPlugin interface.</description>
        <inlineHelpText>The name of the Download Plugin class to use. This class must implement the ffps_prt.IDownloadPlugin interface.</inlineHelpText>
        <label>Download Plugin Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_prt__DownloadPluginNamespace__c</fullName>
        <description>The namespace the class containing the plugin resides in. Leave blank if no namespace is specified.</description>
        <inlineHelpText>The namespace the class containing the plugin resides in. Leave blank if no namespace is specified.</inlineHelpText>
        <label>Download Plugin Namespace</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_prt__EmailFieldReferences__c</fullName>
        <description>Which fields on the Account should be used as email &apos;To&apos; addresses? Should be expressed as a comma separated list of fields, e.g. c2g__CODAFinanceContact__c, c2g__CODAInvoiceEmail__c, RemittanceEmail__c</description>
        <inlineHelpText>Which fields on the Account should be used as email &apos;To&apos; addresses? Should be expressed as a comma separated list of fields, e.g. c2g__CODAFinanceContact__c, c2g__CODAInvoiceEmail__c, RemittanceEmail__c</inlineHelpText>
        <label>Email Field References</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_prt__EmailTemplateName__c</fullName>
        <description>Name of Email Template to be used when sending a Remittance. If not set, &apos;remittance&apos; will be used as default.</description>
        <inlineHelpText>Name of Email Template to be used when sending a Remittance. If not set, &apos;remittance&apos; will be used as default.</inlineHelpText>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_prt__PostPDFToChatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When generating a PDF to Print, should the PDF file be posted to chatter? This setting will should be used in place of (or as well as) &apos;Print Preview in IFrame&apos;  if issues arise.</description>
        <inlineHelpText>When generating a PDF to Print, should the PDF file be posted to chatter? This setting will should be used in place of (or as well as) &apos;Print Preview in IFrame&apos;  if issues arise.</inlineHelpText>
        <label>Post PDF To Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_prt__VisualforcePage__c</fullName>
        <description>Visualforce page used to print remittances</description>
        <inlineHelpText>Visualforce page used to print remittances</inlineHelpText>
        <label>Print Visualforce Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment File/Remittance Settings</label>
</CustomObject>